--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,17 @@ body {
 #result-city {
   margin-top: 2px;
   width: 400px;
-  border: 1px solid ##e3e3e3;
+  border: 1px solid #e3e3e3;
   box-shadow: 0 0 5px 2px #e1e1e1;
+}
+#result-city p {
+  display: block;
+  margin: 0;
+  padding: 5px;
+  cursor: pointer;
+  color: #404040;
+}
+#result-city p:hover {
+  background-color: #5199db;
+  color: #ffffff;
 }
