--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ body {
   width: 400px;
   border: 1px solid #e3e3e3;
   box-shadow: 0 0 5px 2px #e1e1e1;
+  min-height: 200px;
+  max-height: 400px;
 }
 #result-city p {
   display: block;
