--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   box-shadow: 0 0 5px 2px #e1e1e1;
   min-height: 200px;
   max-height: 400px;
+  display: none;
 }
 #result-city p {
   display: block;
