--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   width: 400px;
   border: 1px solid #e3e3e3;
   box-shadow: 0 0 5px 2px #e1e1e1;
-  min-height: 200px;
   max-height: 400px;
   display: none;
   box-sizing: border-box;
@@ -34,4 +33,17 @@ body {
 #result-city p:hover {
   background-color: #5199db;
   color: #ffffff;
+}
+/*Состояния поля*/
+#autocomplete-city:focus::-webkit-input-placeholder {
+  color: #dddddd;
+}
+#autocomplete-city:focus::-moz-placeholder {
+  color: #dddddd;
+}
+#autocomplete-city:focus:-moz-placeholder {
+  color: #dddddd;
+}
+#autocomplete-city:focus:-ms-input-placeholder {
+  color: #dddddd;
 }
